[workspace]
resolver = "2"

members = [
    "types",
    "sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
authors = ["Tell Contributors"]
repository = "https://github.com/tell-rs/signals-sdk"
license = "MIT"

[workspace.dependencies]
# Internal
signals-types = { path = "types", version = "0.1.0" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.43", features = ["sync", "time", "rt"] }

# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# Streaming
futures-util = "0.3"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

[workspace.lints]
rust = {}

[workspace.lints.clippy]
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes = "deny"
trivially_copy_pass_by_ref = "deny"
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_sort_by = "deny"
unnecessary_to_owned = "deny"
uninlined_format_args = "deny"
identity_op = "deny"
collapsible_if = "allow"
