[package]
name = "signals-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Signals SDK — reconnecting SSE signal client for building reactive apps"
repository.workspace = true
readme = "../README.md"

[lints]
workspace = true

[dependencies]
signals-types = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
