[package]
name = "signals-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Signal types for the Signals SDK — lightweight, serde-only extraction boundary"
repository.workspace = true
readme = "../README.md"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
